Use simpler .toList() stream